fix(css): avoid layout overflow when external link is too long

--- a/internal/ui/static/css/common.css
+++ b/internal/ui/static/css/common.css
@@ -1236,6 +1236,7 @@ details.entry-enclosures {
     font-size: 0.8em;
     margin-top: 10px;
     margin-bottom: 10px;
+    word-wrap: break-word;
 }
 
 /* Confirmation */
